feat(auth): hoan tat xac thuc email google oauth va dong bo da tab
- Tich hop Redis staging va gui email qua Gmail SMTP / Resend voi cooldown 60s
- Bo sung trang xac thuc /verify-registration va /onboarding cho hoc sinh moi
- Xu ly dong bo phien da tab qua BroadcastChannel va tu dong nhan dien xac thuc